fix font sizes for viewPosts on mobile

--- a/src/components/ViewPosts/ViewPosts.scss
+++ b/src/components/ViewPosts/ViewPosts.scss
@@ -66,7 +66,7 @@
 
             #countryMapView {
                 height: 100%;
-                width: 50%;
+                width: 45%;
                 border-radius: 2px;
 
                 @media screen and (max-width: $break-tablet) {
@@ -77,7 +77,7 @@
             }
 
             &>div {
-                width: 50%;
+                width: 55%;
                 height: 100%;
                 @include flexSpaceAround(column);
 
@@ -86,7 +86,7 @@
                 }
 
                 h1 {
-                    font-size: 4em;
+                    font-size: 2.6em;
                     line-height: 1.4;
                     display: flex;
                     align-items: center;
@@ -98,8 +98,12 @@
                         margin-right: 10px;
                     }
 
+                    @media screen and (max-width: $break-desktop) {
+                        font-size: 1.7em;
+                    }
+
                     @media screen and (max-width: $break-tablet) {
-                        font-size: 2em;
+                        font-size: 1.5em;
                     }
                 }
 
